# api/swagger.json
@@ -371,7 +371,7 @@
         }
       }
     },
-    "/class/addComment/{_id}": {
+    "/comments/addComment/{_id}": {
       "put": {
         "tags": [
           "Comments"
@@ -421,12 +421,12 @@
         }
       }
     },
-    "/class/getComment/{_id}": {
+    "/comments/{className}/{subject}": {
       "get": {
         "tags": [
           "Comments"
         ],
-        "description": "Get comments from a class",
+        "description": "Get comments from a class and subject",
         "parameters": [
           {
             "name": "authorization",
@@ -436,11 +436,18 @@
             "description": "Bearer Token for authorization"
           },
           {
-            "name": "_id",
+            "name": "className",
             "in": "path",
             "required": true,
             "type": "string",
-            "description": "Class ID for add a comment"
+            "description": "Class name we want to obtain"
+          },
+          {
+            "name": "subject",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "Class subject we want to obtain"
           }
         ],
         "produces": [
@@ -449,6 +456,61 @@
         "responses": {
           "200": {
             "description": "There are comments"
+          },
+          "400": {
+            "description": "Missing a mandatory field"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Error getting the comments"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Comments"
+        ],
+        "description": "Change state of comments from a class and subject",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "required": true,
+            "type": "string",
+            "description": "Bearer Token for authorization"
+          },
+          {
+            "name": "className",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "Class name we want to obtain"
+          },
+          {
+            "name": "subject",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "Class subject we want to obtain"
+          },
+          {
+            "name": "comment",
+            "in": "body",
+            "required": true,
+            "description": "Change status of a comment from a class",
+            "schema": {
+              "$ref": "#/definitions/CommentStatus"
+            }
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Change state of acomments"
           },
           "400": {
             "description": "Missing a mandatory field"
@@ -574,6 +636,20 @@
         "content": {
           "type": "string"
         },
+        "studentName": {
+          "type": "string"
+        },
+        "commentState": {
+          "type": "string"
+        }
+      }
+    },
+    "CommentStatus": {
+      "required": [
+        "studentName",
+        "commentState"
+      ],
+      "properties": {
         "studentName": {
           "type": "string"
         },
